// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support renders search panel by default 1`] = `
<Connect(AccessControl)
  condition={[Function]}
>
  <Modal
    onClose={[MockFunction]}
    open={true}
  >
    <Tabs
      color="orange"
      connectBelow={true}
      selected={0}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
            "view": "docs",
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
            "view": "ticket",
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
            "view": "contact",
          },
        ]
      }
    />
    <Panel
      className="Support"
    >
      <SearchPanel />
    </Panel>
  </Modal>
</Connect(AccessControl)>
`;

exports[`Support renders search panel without tabs when unauthorized to submit tickets 1`] = `
<Connect(AccessControl)
  condition={[Function]}
>
  <Modal
    onClose={[MockFunction]}
    open={true}
  >
    <Panel
      className="Support"
    >
      <SearchPanel />
    </Panel>
  </Modal>
</Connect(AccessControl)>
`;

exports[`Support renders support contact panel 1`] = `
<Connect(AccessControl)
  condition={[Function]}
>
  <Modal
    onClose={[MockFunction]}
    open={true}
  >
    <Tabs
      color="orange"
      connectBelow={true}
      selected={2}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
            "view": "docs",
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
            "view": "ticket",
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
            "view": "contact",
          },
        ]
      }
    />
    <Panel
      className="Support"
    >
      <Connect(Component) />
    </Panel>
  </Modal>
</Connect(AccessControl)>
`;

exports[`Support renders support form 1`] = `
<Connect(AccessControl)
  condition={[Function]}
>
  <Modal
    onClose={[MockFunction]}
    open={true}
  >
    <Tabs
      color="orange"
      connectBelow={true}
      selected={1}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
            "view": "docs",
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
            "view": "ticket",
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
            "view": "contact",
          },
        ]
      }
    />
    <Panel
      className="Support"
    >
      <Connect(ReduxForm)
        onClose={[MockFunction]}
      />
    </Panel>
  </Modal>
</Connect(AccessControl)>
`;
